--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
