--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "i18n-js": "^4.1.1",
     "lottie-react-native": "5.1.4",
     "native-base": "^3.4.15",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.69.1",
     "babel-plugin-module-resolver": "^4.1.0",
