--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -21,6 +22,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
+    "expo-constants": "^14.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-localization": "~14.1.1",
@@ -33,6 +35,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-maps": "^1.7.1",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
