--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: 18.x
-          cache: yarn
+          node-version: 18.13.0
 
       - name: Setup Expo
         uses: expo/expo-github-action@v7
