--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,8 @@ jobs:
           path: "${{ steps.yarn-cache-path.outputs.dir }}"
           key: "${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}"
           restore-keys: "${{ runner.os }}-yarn-"
+      - name: Check directory frontend
+        run: cd frontend
 
       - name: Install dependencies
         run: yarn install --immutable
