--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           key: "${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}"
           restore-keys: "${{ runner.os }}-yarn-"
       - name: Check directory frontend
-        run: cd frontend
+        run: cd frontend | pwd | ls
 
       - name: Install dependencies
         run: yarn install --immutable
