--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Publish build
         run: | 
              cd frontend
-             eas build --platform android --profile preview 
+             eas build --platform android --profile preview --non-interactive
