--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "4.5.0",
