--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,8 @@
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
