Implement Place AutoComplete With LocationIQ

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/lodash.debounce": "^4.0.7",
+    "axios": "^1.4.0",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
     "expo-constants": "^14.2.1",
@@ -29,6 +31,9 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "i18n-js": "^4.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "lodash.debounce": "^4.0.8",
     "lottie-react-native": "5.1.4",
     "native-base": "^3.4.15",
     "nativewind": "^2.0.11",
