--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-autocomplete-dropdown": "^3.0.2",
+    "react-native-feather": "^1.1.2",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.1.0",
@@ -49,6 +51,7 @@
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
+    "remove-accents": "^0.4.4",
     "tailwindcss": "^3.3.2",
     "xml-js": "^1.6.11"
   },
