--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-localization": "~14.1.1",
+    "expo-location": "^15.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "i18n-js": "^4.1.1",
