--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "expo": "^48.0.0",
@@ -37,6 +37,7 @@
     "react-native": "0.71.6",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -52,6 +53,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-onboarding-swiper": "^1.1.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.9.4"
   },
