--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,10 @@
 {
   "name": "frontend",
   "version": "1.1.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -23,7 +22,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/lodash.debounce": "^4.0.7",
     "axios": "^1.4.0",
-    "expo": "^48.0.0",
+    "expo": "~48.0.15",
     "expo-camera": "~13.2.1",
     "expo-constants": "^14.2.1",
     "expo-device": "~5.2.1",
@@ -41,7 +40,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.8",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-feather": "^1.1.2",
     "react-native-google-places-autocomplete": "^2.5.1",
@@ -57,7 +56,8 @@
     "redux-persist": "^6.0.0",
     "remove-accents": "^0.4.4",
     "tailwindcss": "^3.3.2",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
