--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "expo-image-picker": "~14.1.1",
     "expo-localization": "~14.1.1",
     "expo-location": "^15.1.1",
+    "expo-modules-autolinking": "^1.2.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
